# opengl

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  GPUObject.cpp  GPUObject.h  GameApp.cpp  GameApp.h  GameObject.h  GameTimer.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  IndexBuffer.cpp  IndexBuffer.h  MathDef.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  Node.cpp  Node.h  OGLGraphics.cpp  Quaternion.cpp  Quaternion.h  README.md  Shader.h  VaoObject.cpp  VaoObject.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VertexBuffer.cpp  (+15 more)
DX11/: .gitignore  CMakeLists.txt  imgui.ini  settings.ini
DX11/HLSL/: GS.hlsl  GSLine.hlsl  LightPS.hlsl  LightVS.hlsl  PS.hlsl  PSLine.hlsl  PointGS.hlsl  PointPS.hlsl  PointVS.hlsl  PreZPS.hlsl  VS.hlsl  VSLine.hlsl  WireFrameGS.hlsl  WireFramePS.hlsl
DX11/SRC/: DXCamera.cpp  DXCamera.h  EffectHelper.cpp  GameApp.cpp  GameApp.h  Geometry.h  Iter.h  Settings.cpp  Settings.h  TextureManager.cpp  Vertex.cpp  Vertex.h  XUtil.h  d3dApp.cpp  d3dApp.h  sajson.h
DX11/data/GTPOI/: alien-1.off.FeaturePoint.txt  alien-12.off.FeaturePoint.txt  alien-13.off.FeaturePoint.txt  alien-14.off.FeaturePoint.txt  alien-19.off.FeaturePoint.txt  alien-4.off.FeaturePoint.txt  alien-7.off.FeaturePoint.txt  ant-1.off.FeaturePoint.txt  ant-11.off.FeaturePoint.txt  ant-12.off.FeaturePoint.txt  ant-13.off.FeaturePoint.txt  ant-15.off.FeaturePoint.txt  ant-18.off.FeaturePoint.txt  ant-19.off.FeaturePoint.txt  ant-3.off.FeaturePoint.txt  ant-6.off.FeaturePoint.txt  armadillo-12.off.FeaturePoint.txt  armadillo-13.off.FeaturePoint.txt  armadillo-14.off.FeaturePoint.txt  armadillo-15.off.FeaturePoint.txt  armadillo-16.off.FeaturePoint.txt  armadillo-18.off.FeaturePoint.txt  armadillo-19.off.FeaturePoint.txt  armadillo-2.off.FeaturePoint.txt  armadillo-3.off.FeaturePoint.txt  armadillo-5.off.FeaturePoint.txt  armadillo-7.off.FeaturePoint.txt  armadillo-8.off.FeaturePoint.txt  armadillo-9.off.FeaturePoint.txt  bird1-1.off.FeaturePoint.txt  bird1-12.off.FeaturePoint.txt  bird1-16.off.FeaturePoint.txt  bird1-17.off.FeaturePoint.txt  bird1-18.off.FeaturePoint.txt  bird1-3.off.FeaturePoint.txt  bird1-4.off.FeaturePoint.txt  bird1-8.off.FeaturePoint.txt  bird2-10.off.FeaturePoint.txt  bird2-11.off.FeaturePoint.txt  bird2-15.off.FeaturePoint.txt  (+252 more)
DX11/data/PP2/: alien-1.off.txt  alien-10.off.txt  alien-11.off.txt  alien-12.off.txt  alien-13.off.txt  alien-14.off.txt  alien-15.off.txt  alien-16.off.txt  alien-17.off.txt  alien-18.off.txt  alien-19.off.txt  alien-2.off.txt  alien-20.off.txt  alien-3.off.txt  alien-4.off.txt  alien-5.off.txt  alien-6.off.txt  alien-7.off.txt  alien-8.off.txt  alien-9.off.txt  ant-1.off.txt  ant-10.off.txt  ant-11.off.txt  ant-12.off.txt  ant-13.off.txt  ant-14.off.txt  ant-15.off.txt  ant-16.off.txt  ant-17.off.txt  ant-18.off.txt  ant-19.off.txt  ant-2.off.txt  ant-20.off.txt  ant-3.off.txt  ant-4.off.txt  ant-5.off.txt  ant-6.off.txt  ant-7.off.txt  ant-8.off.txt  ant-9.off.txt  (+560 more)
DX11/data/RESPOI/: alien-1.off.poicoord.txt  alien-20.off.poicoord.txt  alien-3.off.poicoord.txt  alien-4.off.poicoord.txt  alien-5.off.poicoord.txt  alien-7.off.poicoord.txt  alien-8.off.poicoord.txt  alien-9.off.poicoord.txt  ant-20.off.poicoord.txt  ant-6.off.poicoord.txt  ant-8.off.poicoord.txt  armadillo-20.off.poicoord.txt  armadillo-3.off.poicoord.txt  armadillo-4.off.poicoord.txt  armadillo-5.off.poicoord.txt  armadillo-6.off.poicoord.txt  armadillo-7.off.poicoord.txt  armadillo-8.off.poicoord.txt  bird1-3.off.poicoord.txt  bird1-5.off.poicoord.txt  bird1-7.off.poicoord.txt  bird1-8.off.poicoord.txt  bird2-20.off.poicoord.txt  bird2-3.off.poicoord.txt  bird2-5.off.poicoord.txt  bird2-7.off.poicoord.txt  camel-20.off.poicoord.txt  camel-3.off.poicoord.txt  camel-5.off.poicoord.txt  cat-20.off.poicoord.txt  cat-6.off.poicoord.txt  cat-7.off.poicoord.txt  cat-8.off.poicoord.txt  centaur-4.off.poicoord.txt  centaur-5.off.poicoord.txt  centaur-7.off.poicoord.txt  centaur-8.off.poicoord.txt  dino_skel-3.off.poicoord.txt  dino_skel-6.off.poicoord.txt  dino_skel-7.off.poicoord.txt  (+90 more)
DX11/data/ResultPOICoord/: alien-9.off.poicoord.txt  ant-3.off.poicoord.txt  ant-4.off.poicoord.txt  ant-5.off.poicoord.txt  ant-7.off.poicoord.txt  ant-9.off.poicoord.txt  armadillo-9.off.poicoord.txt  bird1-20.off.poicoord.txt  bird1-4.off.poicoord.txt  bird1-6.off.poicoord.txt  bird1-9.off.poicoord.txt  bird2-4.off.poicoord.txt  bird2-6.off.poicoord.txt  bird2-8.off.poicoord.txt  bird2-9.off.poicoord.txt  camel-4.off.poicoord.txt  camel-6.off.poicoord.txt  camel-7.off.poicoord.txt  camel-8.off.poicoord.txt  camel-9.off.poicoord.txt  cat-3.off.poicoord.txt  cat-4.off.poicoord.txt  cat-5.off.poicoord.txt  cat-9.off.poicoord.txt  centaur-20.off.poicoord.txt  centaur-3.off.poicoord.txt  centaur-6.off.poicoord.txt  centaur-9.off.poicoord.txt  dino_skel-20.off.poicoord.txt  dino_skel-4.off.poicoord.txt  dino_skel-5.off.poicoord.txt  dino_skel-8.off.poicoord.txt  dinosaur-3.off.poicoord.txt  dinosaur-5.off.poicoord.txt  dinosaur-7.off.poicoord.txt  (+76 more)
NURBS/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  GameApp.cpp  GameApp.h  all.h  openglApp.cpp  openglApp.h
Source/Editor/: CMakeLists.txt
Source/PathTrace/: CMakeLists.txt  Camera.cpp  Camera.h  EnvironmentMap.cpp  EnvironmentMap.h  LoadScene.cpp  LoadScene.h  Material.h  MathUtil.h  Mesh.cpp  Mesh.h  PathTrace.cpp  PathTrace.h  PathTrace.md  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  main.cpp
Source/Test/: CMakeLists.txt  main.cpp
Source/scene01/: CMakeLists.txt  scene_01.cpp  scene_01.h
Source/scene02/: CMakeLists.txt  scene_02.cpp  scene_02.h
Source/scene03/: CMakeLists.txt  scene_03.cpp  scene_03.h
Source/scene04/: CMakeLists.txt  scene_04.cpp  scene_04.h
Source/scene05/: CMakeLists.txt  scene_05.cpp  scene_05.h
Source/scene06/: CMakeLists.txt  scene_06.cpp  scene_06.h
Source/scene07/: CMakeLists.txt  scene_07.cpp  scene_07.h
Source/scene08/: CMakeLists.txt  scene_08.cpp  scene_08.h
(+763 files in other folders)
